# mcp-aws-cost

./: .gitignore  .start_all.pids  AGENT_SETUP.md  CURSOR_CONFIG.md  DASHBOARD_README.md  DATABASE_SETUP.md  QUICKSTART_DASHBOARD.md  README.md  README_POSTGRES.md  SETUP_API_KEY.md  START_SERVICES.md  cursor_mcp_config.json  debug_dates.py  pyproject.toml  requirements.txt  run_server.py  start_all.sh
backend/: agent.py  main.py  run_server.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: AthenaQueryDashboard.jsx  ChatWindow.jsx  DatePicker.jsx
scripts/: backup_database.py  cron.example  daily_fetch_queries.py  generate_random_data.py  generate_spike_scenario.py  init_database.py  recreate_database.py  start_dashboard.sh
src/: __init__.py  server.py
src/tools/: __init__.py  analyze_cost.py  compare_queries.py  fetch_queries.py
src/utils/: __init__.py  database.py  query_parser.py  report_formatter.py
