[project]
name = "mcp-aws-cost"
version = "0.1.0"
description = "MCP server for AWS Athena cost analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

